New Maven goals "reststop:boot" (dev) and "reststop:boot-start" (pre-integration-test) starts Reststop in a bootstrap-like environment.